@@ -1214,7 +1214,8 @@ class BaseFCGIServer(object):
         """
         if self.debug:
             import cgitb
-            req.stdout.write('Content-Type: text/html\r\n\r\n' +
+            req.stdout.write('Status: 500 Internal Server Error\r\n' +
+                             'Content-Type: text/html\r\n\r\n' +
                              cgitb.html(sys.exc_info()))
         else:
             errorpage = """<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
@@ -1225,5 +1226,6 @@ class BaseFCGIServer(object):
 <p>An unhandled exception was thrown by the application.</p>
 </body></html>
 """
-            req.stdout.write('Content-Type: text/html\r\n\r\n' +
+            req.stdout.write('Status: 500 Internal Server Error\r\n' +
+                             'Content-Type: text/html\r\n\r\n' +
                              errorpage)
