@@ -550,7 +550,8 @@ class BaseSCGIServer(object):
         """
         if self.debug:
             import cgitb
-            request.stdout.write('Content-Type: text/html\r\n\r\n' +
+            request.stdout.write('Status: 500 Internal Server Error\r\n' +
+                                 'Content-Type: text/html\r\n\r\n' +
                                  cgitb.html(sys.exc_info()))
         else:
             errorpage = """<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
@@ -561,5 +562,6 @@ class BaseSCGIServer(object):
 <p>An unhandled exception was thrown by the application.</p>
 </body></html>
 """
-            request.stdout.write('Content-Type: text/html\r\n\r\n' +
+            request.stdout.write('Status: 500 Internal Server Error\r\n' +
+                                 'Content-Type: text/html\r\n\r\n' +
                                  errorpage)
